@@ -378,7 +378,7 @@ Installing Ant / Optional Tasks</a> section above.</p>
   </tr>
   <tr>
     <td>commons-net.jar</td>
-    <td>ftp and telnet tasks</td>
+    <td>ftp, rexec and telnet tasks</td>
     <td><a href="http://jakarta.apache.org/commons/net/index.html"
            target="_top">http://jakarta.apache.org/commons/net/index.html</a></td>
   </tr>
