@@ -53,6 +53,7 @@
 <a href="OptionalTasks/pvcstask.html">Pvcs</a><br>
 <a href="OptionalTasks/renameextensions.html"><i>RenameExtensions</i></a><br>
 <a href="OptionalTasks/replaceregexp.html">ReplaceRegExp</a><br>
+<a href="OptionalTasks/rexec.html">RExec</a><br>
 <a href="OptionalTasks/rpm.html">Rpm</a><br>
 <a href="OptionalTasks/serverdeploy.html">ServerDeploy</a><br>
 <a href="OptionalTasks/setproxy.html">Setproxy</a><br>
