@@ -189,6 +189,7 @@ attrib=org.apache.tools.ant.taskdefs.optional.windows.Attrib
 scp=org.apache.tools.ant.taskdefs.optional.ssh.Scp
 sshexec=org.apache.tools.ant.taskdefs.optional.ssh.SSHExec
 jsharpc=org.apache.tools.ant.taskdefs.optional.dotnet.JSharp
+rexec=org.apache.tools.ant.taskdefs.optional.net.RExecTask
 
 # deprecated ant tasks (kept for back compatibility)
 starteam=org.apache.tools.ant.taskdefs.optional.scm.AntStarTeamCheckOut
